<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sota Community App</string>
    <string name="hello_world">Sota Community App Goes HERE!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_radio">RadioActivity</string>
    <string name="title_activity_wiki">WikiActivity</string>
    <string name="title_activity_irc">IrcActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="news_header_text">Avatars Portal News</string>
    <string name="radio_header_text">Avatar\'s Radio</string>
    <string name="irc_header_text">SOTA IRC</string>
    <string name="wiki_header_text">SOTA WIKI</string>
    <string name="calendar_header_text">Calendar</string>
    <string name="events_header_text">Events</string>
    <string name="image_desc_frame">FrameBorder</string>
    <string name="image_desc_pipes">BackgroundPipes</string>
    <string name="radio_url_text">Radio thanks to www.avatarsradio.com</string>
    <string name="radio_playing_text_off">Stopped...</string>
    <string name="radio_playing_text_on">Now Playing:</string>
    <string name="button1_desc_text">Avatars Radio</string>
    <string name="button2_desc_text">SOTA WIKI</string>
    <string name="button3_desc_text">SOTA IRC</string>
    <string name="button4_desc_text">Events</string>
    <string name="button5_desc_text">Calendar</string>
    <string name="button6_desc_text">News</string>
    <string name="image_desc_gears">Gears</string>
    <string name="title_activity_map">Map</string>
    <string name="map_header_text">Map</string>
    <string name="map_desc">Novia Map</string>
    <string name="txt_radio_title_text">Song Title</string>
    <string name="txt_radio_artist_text">Song Artist</string>
    <string name="radio_patreon_text">Please support Avatars Radio</string>
    <string name="title_activity_ircactivity_native">Chat</string>

</resources>
