<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000000"
    tools:context="com.sotacommunityapp.sotacommunityapp.NewsActivity"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/background_pipes"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/clockpunk_background"
        android:scaleType="fitXY"
        android:visibility="visible"
        android:contentDescription="@string/image_desc_pipes" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/frame_padding"
        android:layout_margin="@dimen/frame_margin"
        android:gravity="center_horizontal"
        android:background="#ab000000"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_header_text"
            android:id="@+id/header"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_title_marginTop"
            android:textColor="#ffffff"
            android:textSize="@dimen/activity_title_fontSize"
            android:textIsSelectable="false" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/foreground_frame"
        android:src="@drawable/clockpunk_frame"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:visibility="visible"
        android:contentDescription="@string/image_desc_frame" />

</RelativeLayout>
