<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000000"
    tools:context="com.sotacommunityapp.sotacommunityapp.RadioActivity"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/background_pipes"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/clockpunk_background"
        android:scaleType="fitXY"
        android:visibility="visible"
        android:contentDescription="@string/image_desc_pipes" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/frame_padding"
        android:layout_margin="@dimen/frame_margin"
        android:gravity="center_horizontal"
        android:background="#ab000000"
        >

            <!-- android:background="#3d23051a" -->


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_header_text"
                android:id="@+id/header"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_title_marginTop"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_url_text"
                android:id="@+id/radiourl"
                android:clickable="false"
                android:autoLink="web"
                android:gravity="center"
                android:layout_below="@+id/header"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_playing_text_off"
                android:id="@+id/txt_radio_state"
                android:textColor="#ffff0004"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/radio_playing_marginTop"
                android:layout_below="@+id/radiourl"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Song Title"
                android:id="@+id/txt_radio_title"
                android:textColor="#ff65ccff"
                android:textSize="25sp"
                android:layout_below="@+id/txt_radio_state"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Song Artist"
                android:id="@+id/txt_radio_artist"
                android:textColor="#ff5e58ff"
                android:textSize="@dimen/radio_playing_fontSize"
                android:layout_below="@+id/txt_radio_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/slider_volume"
                android:progress="50"
                android:layout_above="@+id/btn_toggle_play"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/radio_seek_marginBottom" />

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_toggle_play"
                android:textOn="Stop"
                android:textOff="Play"
                android:onClick="onButtonClicked"
                android:layout_alignParentBottom="true"
                />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/foreground_frame"
        android:src="@drawable/clockpunk_frame"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:visibility="visible"
        android:contentDescription="@string/image_desc_frame" />

</RelativeLayout>
